--- a/css/our_styles.css
+++ b/css/our_styles.css
@@ -1,15 +1,19 @@
 .title-img{
     position: relative;
     bottom: 15px;
+    right : 25px;
     height: 100px;
     width: 140px;
 }
-
+.notif-p{
+    font-size: 14px;
+    line-height: 2;
+}
 .nav {
     position: relative;
-    left: 70px;
+    left: 100px;
     bottom: 30px;
-    padding-top: 45px;
+    /* padding-top: 5px; */
     /* padding-bottom: 10px; */
 }
 
@@ -110,12 +114,19 @@
     padding-bottom: 80px;
 }
 
-.modal-img{
+.modal-img1{
     padding-top: 10px;
     padding-right: 50px;
     width: 40vw;
     height: 40vh;
 }
+.modal-img2{
+    padding-top: 10px;
+    padding-right: 50px;
+    width: 30vw;
+    height: 30vh;
+}
+
 
 
 .gallery-title,.team-title{
@@ -175,3 +186,4 @@
 .social{
     padding-left: 4px;
 }
+
