--- a/css/style.css
+++ b/css/style.css
@@ -883,7 +883,7 @@ li {
   width: 50%;
   margin-left: -4px;
   margin-bottom: -5px;
-  padding: 0;
+  padding: 20px;
   text-align: center;
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
@@ -945,11 +945,11 @@ li {
 }
 
 .portfolio-item:hover img {
-  -webkit-transform: scale(1, 5);
-  -moz-transform: scale(1.5);
-  -o-transform: scale(1.5);
-  -ms-transform: scale(1.5);
-  transform: scale(1.5);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .portfolio-caption {
