--- a/vertical-timeline/event.css
+++ b/vertical-timeline/event.css
@@ -10,7 +10,7 @@ body {
   font-family: "Roboto";
   font-size: 17px;
   font-weight: 400;
-  background-color: #f8f7fc;
+  background-color: #CCC;
 }
 
 h1 {
@@ -38,7 +38,7 @@ header p {
 }
 .timeline::before {
   content: "";
-  background: #C5CAE9;
+  background: #f5f5f5;
   width: 5px;
   height: 95%;
   position: absolute;
@@ -141,7 +141,7 @@ blockquote {
 }
 
 .date {
-  background: #FF4081;
+  background: #28ABE3;
   display: inline-block;
   color: #FFFFFF;
   padding: 10px;
