--- a/vertical-timeline/event.css
+++ b/vertical-timeline/event.css
@@ -10,7 +10,7 @@ body {
   font-family: "Roboto";
   font-size: 17px;
   font-weight: 400;
-  background-color: #CCC;
+  background-color: #DDD;
 }
 
 h1 {
