--- a/css/fix.css
+++ b/css/fix.css
@@ -4,16 +4,28 @@
 }
 
 #menu-nav {
-  margin-right: 90px;
+  margin-right: 40px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 769px) {
   #home {
     margin-top: 90px;
   }
 }
 
-@media (max-width: 1270px) {
+@media (max-width: 768px) {
+  #menu-nav {
+    margin: 0;
+    padding-top: 130px;
+  }
+
+  #bs-example-navbar-collapse-1 {
+    padding-left: 0;
+    overflow-x: hidden;
+  }
+}
+
+@media (max-width: 1196px) {
   #menu-nav {
     margin-top: -90px;
   }
@@ -21,12 +33,18 @@
 
 @media (max-width: 1080px) {
   #menu-nav {
-    margin-top: -105px;
+    margin-right: 10px;
   }
 }
 
 @media (max-width: 1123px) {
   #title-logo {
     padding-left: 15px;
+  }
+}
+
+@media (max-width: 1030px) {
+  #bs-example-navbar-collapse-1 {
+    padding-left: 60px;
   }
 }
