--- a/css/fix.css
+++ b/css/fix.css
@@ -7,6 +7,10 @@
   margin-right: 40px;
 }
 
+#saeindia-2 {
+  display: none;
+}
+
 @media (max-width: 769px) {
   #home {
     margin-top: 90px;
@@ -46,5 +50,23 @@
 @media (max-width: 1030px) {
   #bs-example-navbar-collapse-1 {
     padding-left: 60px;
+  }
+}
+
+@media (max-width: 991px) {
+  #saeindia-1 {
+    display: none;
+  }
+
+  #saeindia-2 {
+    display: block;
+  }
+
+  #saegec {
+    padding-left: 0;
+  }
+
+  #saeinternational {
+    padding-left: 0;
   }
 }
