--- a/css/our_styles.css
+++ b/css/our_styles.css
@@ -1,6 +1,6 @@
 .title-img{
     position: relative;
-    bottom: 15px;
+    bottom: 20px;
     right : 25px;
     height: 100px;
     width: 140px;
@@ -26,29 +26,71 @@
 }
 
 .nav {
-    position: relative;
-    left: 5vw;
-    bottom: 30px;
-    padding-top: 45px;
-    padding-right: 20px;
-    /* padding-bottom: 5px; */
+    padding-top: 10px;
+    padding-right: 30px;
+    padding-left: 30px;
+    padding-bottom: 5px;
     
 }
 
 
-
-
+@media (max-width: 1300px) {
+    .img-responsive {
+      padding-top: 80px;
+    }
+    .img-responsive1,.img-responsive2{
+        padding-top: 0px;
+    }
+  }
+  @media (min-width: 992px) and (max-width: 1200px){
+    .img-responsive1{
+        padding-top: 20px;
+    }
+    .about-SAE{
+        font-size: 10px;
+    }
+  }
+@media (min-width: 1200px) {
+   .about-SAE{
+        padding-top: 10px;
+        padding-left: 40px;
+        font-size: 15px;
+        line-height: 2;
+        text-align: justify;
+    }
+    .about-SAEindia{
+        padding-top: 10px;
+        font-size: 15px;
+        line-height: 2;
+        text-align: justify;
+    }
+}
+@media (min-width: 992px) and (max-width: 1200px) {
+    .about-SAE{
+         padding-top: 10px;
+         padding-left: 40px;
+         font-size: 14px;
+         line-height: 2;
+         text-align: justify;
+     }
+     .about-SAEindia{
+        padding-top: 10px;
+        font-size: 14px;
+        line-height: 2;
+        text-align: justify;
+    }
+    
+ }
 .about-SAE{
     padding-top: 10px;
     padding-left: 40px;
-    font-size: 15px;
+    /* font-size: 15px; */
     line-height: 2;
     text-align: justify;
 }
-
 .about-SAEindia{
     padding-top: 10px;
-    font-size: 15px;
+    /* font-size: 15px; */
     line-height: 2;
     text-align: justify;
 }
@@ -144,8 +186,8 @@
 .modal-img2{
     padding-top: 10px;
     padding-right: 50px;
-    width: 30vw;
-    height: 30vh;
+    width: 50vw;
+    height: 50vh;
 }
 
 
@@ -184,6 +226,8 @@
     background-color: #28ABE3; 
     border: none;
     color: white;
+    position: relative;
+    right: 1vw;
     padding: 8px 20px;
     text-align: center;
     text-decoration: none;
@@ -217,9 +261,11 @@
     color: white;
 }
 .social{
-    padding-left: 4px;
+    padding-left: 3px;
 }
-
+.social-yt{
+    padding-left: 2px;
+}
 
 .achieve-img{
     height: 250px;
@@ -229,10 +275,111 @@
 }
 .achieve-p{
     color: #999;
+    padding-bottom: 60px;
 }
 .achieve-desc{
     color: #666;
 }
 .achieve-li{
-    padding: 20px;
+    padding-left: 35px;
+}
+
+@media (max-width: 1300px){
+    .title-img{
+        position: relative;
+        bottom: 25px;
+        right : 5px;
+        height: 80px;
+        width: 120px;
+    }
+    .navbar-default {
+        border-color: transparent;
+        background-color: #222;
+        padding: 10px 0;
+      }
+    
+    
+
+}
+@media (max-width: 992px) {
+    .img-responsive1{
+        transform: scale(0.8);
+    }
+    .welcome-section p {
+        padding: 20px 40px 0px 40px;
+        color: #999;
+    }
+    .about-SAE{
+        margin-top: -40px;
+        padding-right: 40px;
+        padding-bottom: 80px;
+    }
+    .about-SAEindia{
+        margin-top: -40px;
+        padding-right: 40px;
+        padding-left: 40px;
+        padding-bottom: 80px;
+    }
+
+}
+
+@media screen and (max-width: 992px) {
+    .container-sae{ display: flex; flex-flow: column; }
+    #div1 { order: 2; }
+    #div2 { order: 1; }
+
+    .modal-img1{
+        position: relative;
+        width: 80%;
+        left: 15%;
+        padding-bottom: 60px;
+    }
+    .modal-img2{
+        position: relative;
+        width: 80%;
+        left: 15%;
+        padding-bottom: 60px;
+    }
+    .section-title p {
+        padding-left: 25px;
+        padding-right: 25px;
+    }
+    
+
+}
+@media screen and (max-width: 500px) {
+    .modal-img1{
+        position: relative;
+        width: 100%;
+        height: 100%;
+        left: 8%;
+        padding-bottom: 70px;
+        margin-top: -50px;
+    }
+    .modal-img2{
+        position: relative;
+        width: 100%;
+        height: 100%;
+        left: 8%;
+        padding-bottom: 70px;
+        margin-top: -50px;
+    }
+    .button{
+        position: relative;  
+        right: 0px;
+    }
+  
+}
+
+@media screen and (min-width: 992px) and (max-width: 1300px){
+    .button{
+        position: relative;
+        left: 75px;
+    }
+}
+@media screen and (min-width: 500px) and (max-width: 992px){
+    .button{
+        position: relative;
+        left: 10px;
+    }
 }
