--- a/gallery/css/templatemo-style.css
+++ b/gallery/css/templatemo-style.css
@@ -739,3 +739,8 @@ figure.effect-sadie:hover p {
   .img-hover-zoom:hover img {
 	transform: scale(1.3);
   }
+
+.nav{
+	position: relative;
+	left: 10px;
+}
