--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Satisfy);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600,400italic);
-@import url(http://fonts.googleapis.com/css?family=Oswald:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Satisfy);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600,400italic);
+@import url(https://fonts.googleapis.com/css?family=Oswald:300,400,700);
 
 body {
   overflow-x: hidden;
