--- a/achievements/css/templatemo-style.css
+++ b/achievements/css/templatemo-style.css
@@ -724,3 +724,9 @@ figure.effect-sadie:hover p {
 	.tm-2-col-textbox-2 { margin-right: 15px; }
 	#google-map { height: 520px; }
 }
+
+
+.nav{
+	position: relative;
+	left: 10px;
+}
