--- a/css/our_styles.css
+++ b/css/our_styles.css
@@ -277,10 +277,12 @@
 }
 .desc{
     padding-top: 40px;
+    padding-left: 20px;
 }
 .achieve-p{
     color: #999;
     padding-bottom: 60px;
+    text-align: center;
 }
 .achieve-desc{
     color: #666;
@@ -318,12 +320,14 @@
         margin-top: -40px;
         padding-right: 40px;
         padding-bottom: 80px;
+        font-size: 14px;
     }
     .about-SAEindia{
         margin-top: -40px;
         padding-right: 40px;
         padding-left: 40px;
         padding-bottom: 80px;
+        font-size: 14px;
     }
 
 }
@@ -392,3 +396,4 @@
         left: 10px;
     }
 }
+
