--- a/css/style.css
+++ b/css/style.css
@@ -958,7 +958,6 @@ li {
     position: relative;
     right: 2px;
     padding-top: 20px;
-    
   }
   /* .achieve-img{
     width: 100%;
@@ -1043,6 +1042,11 @@ li {
   }
 }
 
+.portfolio-list-ach {
+  display: flex;
+  flex-flow: wrap;
+}
+
 .portfolio-item {
   /* width: 100%; */
   height: 100%;
@@ -1051,6 +1055,7 @@ li {
   cursor: default;
   transition: all 0.3s;
   -webkit-transition: all 0.3s;
+  float: none;
 }
 
 .portfolio-item img {
@@ -1243,7 +1248,9 @@ li {
   font-size: 40px;
 }
 
-.timer,.timer1,.timer2{
+.timer,
+.timer1,
+.timer2 {
   font-size: 48px;
   font-weight: 800;
   text-transform: uppercase;
@@ -1256,44 +1263,36 @@ li {
   position: absolute;
   top: 60px;
   right: 70px;
- 
 }
 .timer2 {
   position: absolute;
   top: 60px;
   right: 80px;
- 
 }
 
 @media (min-width: 992px) and (max-width: 1200px) {
-  .timer1{
+  .timer1 {
     right: 50px;
-   
   }
-  .timer2{
+  .timer2 {
     right: 60px;
   }
- 
 }
 @media (min-width: 768px) and (max-width: 991px) {
-  .timer1{
+  .timer1 {
     right: 115px;
-   
   }
-  .timer2{
+  .timer2 {
     right: 125px;
   }
- 
 }
-@media  (max-width: 767px) {
-  .timer1{
+@media (max-width: 767px) {
+  .timer1 {
     left: 170px;
-   
   }
-  .timer2{
+  .timer2 {
     left: 160px;
   }
- 
 }
 /*-------------------------------------------------*/
 /* Start Latest News Section                       */
